--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,12 @@
 
 //SweetAlert2
 @import '~sweetalert2/src/sweetalert2.scss';
+
+//Swiper
+// @import "~swiper/swiper.scss";
+@import 'swiper/css';
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
+// @import 'node_modules/swiper/swiper';
+// @import 'node_modules/swiper/modules/navigation/navigation';
+// @import 'node_modules/swiper/modules/pagination/pagination';
